--- a/PanArctic_DSL_download_CMEMS.ipynb
+++ b/PanArctic_DSL_download_CMEMS.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,21 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_DIRECTORY_PHY = 'data/remote_sensing/physics'"
+    "OUTPUT_DIRECTORY = 'data/remote_sensing/physics/phy_266_318m'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Depths of interest\n",
-    "depth = [0, 222, 380, 644, 1062]"
+    "depth = [266, 318]"
    ]
   },
   {
@@ -197,11 +197,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 2015-01-15 266 m\n",
+      "Downloading 2015-02-15 266 m\n",
+      "Downloading 2015-03-15 266 m\n",
+      "Downloading 2015-04-15 266 m\n",
+      "Downloading 2015-05-15 266 m\n",
+      "Downloading 2015-06-15 266 m\n",
+      "Downloading 2015-07-15 266 m\n",
+      "Downloading 2015-08-15 266 m\n",
+      "Downloading 2015-09-15 266 m\n",
+      "Downloading 2015-10-15 266 m\n",
+      "Downloading 2015-11-15 266 m\n",
+      "Downloading 2015-12-15 266 m\n",
+      "Downloading 2016-01-15 266 m\n",
+      "Downloading 2016-02-15 266 m\n",
+      "Downloading 2016-03-15 266 m\n",
+      "Downloading 2016-04-15 266 m\n",
+      "Downloading 2016-05-15 266 m\n",
+      "Downloading 2016-06-15 266 m\n",
+      "Downloading 2016-07-15 266 m\n",
+      "Downloading 2016-08-15 266 m\n",
+      "Downloading 2016-09-15 266 m\n",
+      "Downloading 2016-10-15 266 m\n",
+      "Downloading 2016-11-15 266 m\n",
+      "Downloading 2016-12-15 266 m\n",
+      "Downloading 2017-01-15 266 m\n",
+      "Downloading 2017-02-15 266 m\n",
+      "Downloading 2017-03-15 266 m\n",
+      "Downloading 2017-04-15 266 m\n",
+      "Downloading 2017-05-15 266 m\n",
+      "Downloading 2017-06-15 266 m\n",
+      "Downloading 2017-07-15 266 m\n",
+      "Downloading 2017-08-15 266 m\n",
+      "Downloading 2017-09-15 266 m\n",
+      "Downloading 2017-10-15 266 m\n",
+      "Downloading 2017-11-15 266 m\n",
+      "Downloading 2017-12-15 266 m\n",
+      "Download 266m finished.\n",
+      "Downloading 2015-01-15 318 m\n",
+      "Downloading 2015-02-15 318 m\n",
+      "Downloading 2015-03-15 318 m\n",
+      "Downloading 2015-04-15 318 m\n",
+      "Downloading 2015-05-15 318 m\n",
+      "Downloading 2015-06-15 318 m\n",
+      "Downloading 2015-07-15 318 m\n",
+      "Downloading 2015-08-15 318 m\n",
+      "Downloading 2015-09-15 318 m\n",
+      "Downloading 2015-10-15 318 m\n",
+      "Downloading 2015-11-15 318 m\n",
+      "Downloading 2015-12-15 318 m\n",
+      "Downloading 2016-01-15 318 m\n",
+      "Downloading 2016-02-15 318 m\n",
+      "Downloading 2016-03-15 318 m\n",
+      "Downloading 2016-04-15 318 m\n",
+      "Downloading 2016-05-15 318 m\n",
+      "Downloading 2016-06-15 318 m\n",
+      "Downloading 2016-07-15 318 m\n",
+      "Downloading 2016-08-15 318 m\n",
+      "Downloading 2016-09-15 318 m\n",
+      "Downloading 2016-10-15 318 m\n",
+      "Downloading 2016-11-15 318 m\n",
+      "Downloading 2016-12-15 318 m\n",
+      "Downloading 2017-01-15 318 m\n",
+      "Downloading 2017-02-15 318 m\n",
+      "Downloading 2017-03-15 318 m\n",
+      "Downloading 2017-04-15 318 m\n",
+      "Downloading 2017-05-15 318 m\n",
+      "Downloading 2017-06-15 318 m\n",
+      "Downloading 2017-07-15 318 m\n",
+      "Downloading 2017-08-15 318 m\n",
+      "Downloading 2017-09-15 318 m\n",
+      "Downloading 2017-10-15 318 m\n",
+      "Downloading 2017-11-15 318 m\n",
+      "Downloading 2017-12-15 318 m\n",
+      "Download 318m finished.\n"
+     ]
+    }
+   ],
    "source": [
     "for z in depth:\n",
     "    for date in daterange:\n",
@@ -219,7 +300,7 @@
     "        --depth-max '+ str(z) +' \\\n",
     "        --variable latitude --variable longitude --variable mlotst --variable siconc \\\n",
     "        --variable sithick --variable so --variable thetao --variable vxo --variable vyo \\\n",
-    "        --out-dir <OUTPUT_DIRECTORY_PHY> \\\n",
+    "        --out-dir <OUTPUT_DIRECTORY> \\\n",
     "        --out-name '+ str(date.year) + str(f\"{date:%m}\") + str(f\"{date:%d}\") + \"_\" + str(z) + \"m_phy_CMEMS.nc\" +' \\\n",
     "        --user <USERNAME> --pwd <PASSWORD>'\n",
     "        print(\"Downloading \" + str(date.year) + \"-\" + str(f\"{date:%m}\") + \"-\" + str(f\"{date:%d}\") + \" \" + str(z) + \" m\")\n",
@@ -291,7 +372,7 @@
    ],
    "source": [
     "# Open and read a file\n",
-    "PHY = xr.open_dataset(OUTPUT_DIRECTORY_PHY + \"/20150215_0m_phy_CMEMS.nc\")\n",
+    "PHY = xr.open_dataset(OUTPUT_DIRECTORY + \"/20150215_266m_phy_CMEMS.nc\")\n",
     "print(PHY)"
    ]
   },
@@ -368,7 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_DIRECTORY_CHL = 'data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/nc'"
+    "OUTPUT_DIRECTORY = 'data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/nc'"
    ]
   },
   {
@@ -442,7 +523,7 @@
     "    --date-min \"'+ str(date) +'\" \\\n",
     "    --date-max \"'+ str(date) +'\" \\\n",
     "    --variable CHL --variable grid_mapping \\\n",
-    "    --out-dir <OUTPUT_DIRECTORY_CHL> \\\n",
+    "    --out-dir <OUTPUT_DIRECTORY> \\\n",
     "    --out-name '+ str(date.year) + str(f\"{date:%m}\") + str(f\"{date:%d}\") + \"_chl_CMEMS.nc\" +' \\\n",
     "    --user <USERNAME> --pwd <PASSWORD>'\n",
     "    print(\"Downloading chl \" + str(date.year) + \"-\" + str(f\"{date:%m}\") + \"-\" + str(f\"{date:%d}\"))\n",
